--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -26,6 +26,9 @@
     <div *ngFor="let restaurant of restaurantes" class="col-sm-6 col-xs-12">
       <mt-restaurant [restaurant]="restaurant"></mt-restaurant>
     </div>
+    <div *ngIf="restaurantes?.length === 0" class="col-xs-12">
+      <p class="lead text-center">Não foram encontrados itens para sua busca.</p>
+    </div>
 
   </div>
 
